# ai-agentic-platform

./: README.md
ai-research-assistant/: .env.example  .gitignore  README.md  pyproject.toml
ai-research-assistant/app/: streamlit_app.py
ai-research-assistant/data/: 02_langchain_chains.md  06_langsmith.md  project_antigravity.txt  research_notes.txt
ai-research-assistant/docs/: 01_llm_basics.md  04_tools_agents.md  05_langgraph.md  09_hitl.md
ai-research-assistant/experiments/: basic_llm.py  graph_research.py  list_models.py  rag_pipeline.py  search_agent.py  simple_chain.py  test_reusable_chain.py  test_reusable_rag.py  tools_basics.py
ai-research-assistant/src/chains/: qa_chain.py
ai-research-assistant/src/graph/: graph.py  nodes.py  state.py
ai-research-assistant/src/llm/: gemini_client.py  groq_client.py
ai-research-assistant/src/rag/: retrieval_chain.py  vectorstore.py
aws-infra-assistant/: README.md  main.py  orchestrator.py  prompts.py  requirements.txt  state.py
aws-infra-assistant/agents/: ec2_agent.py  lambda_agent.py  rds_agent.py
aws-infra-assistant/tools/: aws_cli.py
